--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Alvin Dogba</h1>
     <h2>Allen</h2>
+
+    <!-- Adding new attems on this branch -->
+     <p>The Zongea Institute Of Technology</p>
 </body>
 </html>
